feat: implement PostgreSQL storage layer with user, group, and permission models
- Added models for AccessToken, APIKey, EmailVerificationToken, Group, PasswordResetToken, Permission, RefreshToken, User, and UserActivity.
- Implemented mappers for converting between domain and model representations for User, Group, and Permission.
- Created PostgreSQL migration script to initialize the database schema with necessary tables and constraints.
- Developed repository and service layers for user management, including user registration with password hashing.
- Established a singleton pattern for database connection management.
- Defined core domain structures for AccessToken, APIKey, EmailVerificationToken, Group, PasswordResetToken, Permission, RefreshToken, User, and UserActivity.
- Introduced error handling constants for common application errors.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,11 @@
 DEBUG=true
 SERVER_PORT=8080
-JWT_SECRET_KEY="replace-you-secret-key"
+JWT_SECRET_KEY="secret"
+
+POSTGRES_PASSWORD="password"
+POSTGRES_USER="admin"
+POSTGRES_DB="authify"
+POSTGRES_HOST="127.0.0.1"
+POSTGRES_PORT=5432
+POSTGRES_SSL_MODE="disable" # disable, allow or another options..
+POSTGRES_TIME_ZONE="Asia/Tehran"
