Refactor project structure, add superuser creation and database migration commands
- Added CLI commands: createsuperuser and migrate
- Restructured user handler into modular files: auth.go, crud.go, user.go
- Updated Taskfile.yaml with new tasks for development and management
- Removed unused SQL migration file
- Updated API key model and user repository logic
- Improved request/response DTOs for user authentication
- Renamed and reorganized handler files for better clarity
- Cleaned up .gitignore and go module dependencies

--- a/Taskfile.yaml
+++ b/Taskfile.yaml
@@ -2,16 +2,35 @@
 
 version: '3'
 
-vars:
-  GREETING: Hello, World!
+dotenv: ['.env']
 
 tasks:
   dev:
+    desc: Start the HTTP development server
     cmds:
       - go run ./cmd/http/main.go
     silent: true
   
   swag:
+    desc: Generate Swagger API documentation using swag
     cmds:
       - swag init --generalInfo ./cmd/http/main.go --output ./docs --parseDependency --parseInternal
-    silect: true
+    silent: true
+
+  migrate:
+    desc: Apply database schema changes using GORM AutoMigrate
+    cmds: 
+      - go run ./cmd/migrate/main.go
+    silent: true
+
+  createsuperuser:
+    desc: Create a superuser account; usage >>> task createsuperuser -- <username> <password>
+    cmds:
+      - go run ./cmd/createsuperuser/main.go {{.CLI_ARGS}}
+    silent: true
+
+  export_schema:
+    desc: Export db schema
+    cmds:
+      - docker exec -t postgres_db pg_dump -U {{.POSTGRES_USER}} --schema-only --no-owner --no-privileges {{.POSTGRES_DB}} > schema.sql
+    silent: true
